; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rcutree.c_cpu_needs_another_gp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_rcutree.c_cpu_needs_another_gp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rcu_state = type { i32 }
%struct.rcu_data = type { i64** }

@RCU_DONE_TAIL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rcu_state*, %struct.rcu_data*)* @cpu_needs_another_gp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpu_needs_another_gp(%struct.rcu_state* %0, %struct.rcu_data* %1) #0 {
  %3 = alloca %struct.rcu_state*, align 8
  %4 = alloca %struct.rcu_data*, align 8
  store %struct.rcu_state* %0, %struct.rcu_state** %3, align 8
  store %struct.rcu_data* %1, %struct.rcu_data** %4, align 8
  %5 = load %struct.rcu_data*, %struct.rcu_data** %4, align 8
  %6 = getelementptr inbounds %struct.rcu_data, %struct.rcu_data* %5, i32 0, i32 0
  %7 = load i64**, i64*** %6, align 8
  %8 = load i64, i64* @RCU_DONE_TAIL, align 8
  %9 = getelementptr inbounds i64*, i64** %7, i64 %8
  %10 = load i64*, i64** %9, align 8
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load %struct.rcu_state*, %struct.rcu_state** %3, align 8
  %15 = call i32 @rcu_gp_in_progress(%struct.rcu_state* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br label %18

18:                                               ; preds = %13, %2
  %19 = phi i1 [ false, %2 ], [ %17, %13 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @rcu_gp_in_progress(%struct.rcu_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
